--- a/src/App.css
+++ b/src/App.css
@@ -8,26 +8,26 @@
   padding: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.icon-button {
+  cursor: pointer;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  margin: 4px;
+  padding: 8px;
+  border: 2px solid #333;
+  border-radius: 100%;
+  min-width: 16px;
+  min-height: 16px;
 }
 
-.App-link {
-  color: #61dafb;
+.icon-button svg {
+  width: 100%;
+  height: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+div {
+  display: flex;
+  flex-direction: row;
 }
