--- a/src/bpmn/nodes/nodeStyles.css
+++ b/src/bpmn/nodes/nodeStyles.css
@@ -1,26 +1,63 @@
+h5, h6 {
+  margin: 0;
+  padding: 0;
+}
+
 .basic-node {
-  min-height: 50px;
-  min-width: 50px;
-  padding: 5px;
+  margin: 8px;
+  min-height: 32px;
+  min-width: 32px;
   border: 3px solid #eee;
   border-radius: 3px;
   background: white;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
+.basic-node p {
+  margin: 0;
+  padding: 0;
+}
+
+.basic-node h6.subtitle {
+  font-size: .75rem;
+  color: #bbb;
+}
+
+.end-event,
 .start-event {
-  border-radius: 50px;
+  border-radius: 100%;
+}
+
+.end-event {
+  margin-left: 0;
 }
 
 .user-task {
   width: 200px;
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
+.user-task .task-fields {
+  display: flex;
+  flex-direction: column;
+}
+
+.user-task .task-fields span {
+  margin-right: 4px;
 }
 
 .sub-workflow {
-  background: rgba(240, 248, 255, 0.648);
-  width: inherit;
-  height: inherit;
+  display: flex;
+  justify-content: center;
+  border: 1px solid black;
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
+}
+
+
+.sub-workflow h5 {
+  transform: translate(0, -24px);
 }
