--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
   margin: 4px;
   padding: 8px;
   border: 2px solid #333;
+  color: #333;
   border-radius: 100%;
   min-width: 16px;
   min-height: 16px;
