--- a/src/bpmn/nodes/nodeStyles.css
+++ b/src/bpmn/nodes/nodeStyles.css
@@ -6,13 +6,21 @@ h5, h6 {
 .basic-node {
   min-height: 32px;
   min-width: 32px;
-  width: 100%;
-  height: 100%;
+  width: calc(100% - 6px);
+  height: calc(100% - 6px);
   border: 3px solid #eee;
   border-radius: 3px;
   background: white;
   display: flex;
   flex-direction: column;
+}
+
+.node-base {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .basic-node p {
